--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 addopts =
   --doctest-modules
   --durations=5
-  --cov=qualia --cov=qualia_tests
-  --cov-report term-missing
   --ignore setup.py
   --ignore build
+  --cov mir/qualia
+  --cov qualia_tests
