--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 dependencies:
   override:
     - pip3 install -r requirements.txt
-    - python3 setup.py develop
+    - pip3 install -e .
 test:
   override:
     - py.test
