Don’t cover main

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,5 +8,6 @@ exclude_lines =
   pragma: no cover
   raise NotImplementedError
   if __name__ == .__main__.:
+  def main\(\):
 show_missing = True
 skip_covered = True
